# multi-imbalance

./: .gitignore  .travis.yml  LICENSE  README.md  bracid.py  generate_articificial_datasets.py  pyproject.toml  removeme.py  requirements.txt  setup.py  spider.ipynb  test_add_all_good_rules.py  test_add_one_best_rule.py  test_add_tags.py  test_add_tags_and_extract_rules.py  test_are_duplicates.py  test_assign_tag.py  test_bracid.py  test_compute_f1_for_predictions.py  test_create_svdm_lookup_column.py  test_cv.py  test_cv_binary.py  test_cv_multiclass.py  test_delete_rule_statistics.py  test_di.py  test_does_rule_cover_example.py  test_evaluate_f1_initialize_confusion_matrix.py  test_evaluate_f1_temporarily.py  test_evaluate_f1_update_confusion_matrix.py  test_extend_rule.py  test_extract_initial_rules.py  test_extract_rules_and_train_and_predict_multiclass.py  test_f1.py  test_find_duplicate_rule_id.py  test_find_nearest_rule.py  test_find_neighbors.py  test_hvdm.py  test_is_duplicate.py  test_merge_rule_statistics_of_duplicate.py  test_most_specific_generalization.py  (+12 more)
.archive_benchmarks/ensemble/: ecoc.ipynb
.archive_benchmarks/resample/: kparam.ipynb
.archive_benchmarks/soupbg/: soupbg.ipynb
.archive_benchmarks/spider/: article_results.csv  custom_results.csv  spider.ipynb
.github/workflows/: code_analysis.yml  tests.yml
.ipynb_checkpoints/: spider-checkpoint.ipynb
benchmarks/: resample.ipynb  spider-default  spider-default2  spider-none  spider-none2  spider.ipynb
benchmarks/ensemble/: ecoc.ipynb  (+1 more)
docs/: build.sh  conf.py  help.rst  index.rst  license.rst
examples/: example_ecml_presentation.ipynb  use_case.ipynb
multi_imbalance/: __init__.py
multi_imbalance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py
(+677 files in other folders)
