[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-imbalance"
description = "Python package for tackling multiclass imbalance problems."
version = "0.1.0"
maintainers = [
    { name = "Damian Horna, Kamil Pluciński, Hanna Klimczak, Jacek Grycza, Jan Kozłowski, Maciej Falbogowski, Adam Wojciechowski, Mateusz Woźny", email = "horna.damian@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",

]
dependencies = [
    "numpy~=1.23.4",
    "scikit-learn~=1.1.3",
    "pandas~=1.5.1",
    "imbalanced-learn~=0.9.1",
    "seaborn~=0.12.1",
    "matplotlib~=3.6.2",
    "click~=8.1.3",
    "scikit-posthocs~=0.7.0",
    "pydantic~=1.10.5",
]

[project.optional-dependencies]
test = ["pytest~=7.2.0", "pytest-cov~=4.0.0", "coverage~=6.5.0"]
lint = ["flake8~=5.0.4"]
dev = ["tox~=3.27.0"]
notebooks = [
    "ipython~=8.6.0",
    "ipykernel~=6.17.0",
    "tqdm~=4.64.1",
    "jupyter~=1.0.0",
]
all = [
    "multi-imbalance[test]",
    "multi-imbalance[lint]",
    "multi-imbalance[dev]",
    "multi-imbalance[notebooks]",
]

[project.urls]
homepage = "https://github.com/damian-horna/multi-imbalance"
documentation = "https://github.com/damian-horna/multi-imbalance/blob/master/README.md"

[tool.pytest.ini_options]
addopts = "--cov=."
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["multi_imbalance*"]

[tool.black]
line-length = 140
